tests/snapshots/parse__tests__parse_let_bindings_example.snap
---
source: tests/parse.rs
expression: ast
---
[
    (
        List(
            [
                (
                    Identifier(
                        "fn",
                    ),
                    SimpleSpan {
                        start: 190,
                        end: 192,
                        context: (),
                    },
                ),
                (
                    List(
                        [
                            (
                                Identifier(
                                    "main",
                                ),
                                SimpleSpan {
                                    start: 194,
                                    end: 198,
                                    context: (),
                                },
                            ),
                        ],
                    ),
                    SimpleSpan {
                        start: 193,
                        end: 199,
                        context: (),
                    },
                ),
                (
                    List(
                        [
                            (
                                Identifier(
                                    "let",
                                ),
                                SimpleSpan {
                                    start: 203,
                                    end: 206,
                                    context: (),
                                },
                            ),
                            (
                                Identifier(
                                    "x",
                                ),
                                SimpleSpan {
                                    start: 207,
                                    end: 208,
                                    context: (),
                                },
                            ),
                            (
                                Number(
                                    42,
                                ),
                                SimpleSpan {
                                    start: 209,
                                    end: 211,
                                    context: (),
                                },
                            ),
                        ],
                    ),
                    SimpleSpan {
                        start: 202,
                        end: 212,
                        context: (),
                    },
                ),
                (
                    List(
                        [
                            (
                                Identifier(
                                    "let",
                                ),
                                SimpleSpan {
                                    start: 216,
                                    end: 219,
                                    context: (),
                                },
                            ),
                            (
                                Identifier(
                                    "y",
                                ),
                                SimpleSpan {
                                    start: 220,
                                    end: 221,
                                    context: (),
                                },
                            ),
                            (
                                List(
                                    [
                                        (
                                            Identifier(
                                                "+",
                                            ),
                                            SimpleSpan {
                                                start: 223,
                                                end: 224,
                                                context: (),
                                            },
                                        ),
                                        (
                                            Identifier(
                                                "x",
                                            ),
                                            SimpleSpan {
                                                start: 225,
                                                end: 226,
                                                context: (),
                                            },
                                        ),
                                        (
                                            Number(
                                                8,
                                            ),
                                            SimpleSpan {
                                                start: 227,
                                                end: 228,
                                                context: (),
                                            },
                                        ),
                                    ],
                                ),
                                SimpleSpan {
                                    start: 222,
                                    end: 229,
                                    context: (),
                                },
                            ),
                        ],
                    ),
                    SimpleSpan {
                        start: 215,
                        end: 230,
                        context: (),
                    },
                ),
                (
                    List(
                        [
                            (
                                Identifier(
                                    "print_line",
                                ),
                                SimpleSpan {
                                    start: 234,
                                    end: 244,
                                    context: (),
                                },
                            ),
                            (
                                String(
                                    "Testing let bindings:",
                                ),
                                SimpleSpan {
                                    start: 245,
                                    end: 268,
                                    context: (),
                                },
                            ),
                        ],
                    ),
                    SimpleSpan {
                        start: 233,
                        end: 269,
                        context: (),
                    },
                ),
                (
                    List(
                        [
                            (
                                Identifier(
                                    "print_line",
                                ),
                                SimpleSpan {
                                    start: 273,
                                    end: 283,
                                    context: (),
                                },
                            ),
                            (
                                Identifier(
                                    "x",
                                ),
                                SimpleSpan {
                                    start: 284,
                                    end: 285,
                                    context: (),
                                },
                            ),
                        ],
                    ),
                    SimpleSpan {
                        start: 272,
                        end: 286,
                        context: (),
                    },
                ),
                (
                    List(
                        [
                            (
                                Identifier(
                                    "print_line",
                                ),
                                SimpleSpan {
                                    start: 290,
                                    end: 300,
                                    context: (),
                                },
                            ),
                            (
                                Identifier(
                                    "y",
                                ),
                                SimpleSpan {
                                    start: 301,
                                    end: 302,
                                    context: (),
                                },
                            ),
                        ],
                    ),
                    SimpleSpan {
                        start: 289,
                        end: 303,
                        context: (),
                    },
                ),
                (
                    List(
                        [
                            (
                                Identifier(
                                    "print_line",
                                ),
                                SimpleSpan {
                                    start: 307,
                                    end: 317,
                                    context: (),
                                },
                            ),
                            (
                                List(
                                    [
                                        (
                                            Identifier(
                                                "+",
                                            ),
                                            SimpleSpan {
                                                start: 319,
                                                end: 320,
                                                context: (),
                                            },
                                        ),
                                        (
                                            Identifier(
                                                "x",
                                            ),
                                            SimpleSpan {
                                                start: 321,
                                                end: 322,
                                                context: (),
                                            },
                                        ),
                                        (
                                            Identifier(
                                                "y",
                                            ),
                                            SimpleSpan {
                                                start: 323,
                                                end: 324,
                                                context: (),
                                            },
                                        ),
                                    ],
                                ),
                                SimpleSpan {
                                    start: 318,
                                    end: 325,
                                    context: (),
                                },
                            ),
                        ],
                    ),
                    SimpleSpan {
                        start: 306,
                        end: 326,
                        context: (),
                    },
                ),
            ],
        ),
        SimpleSpan {
            start: 189,
            end: 327,
            context: (),
        },
    ),
]
