tests/snapshots/parse__tests__salsa_hello.snap
---
source: tests/parse.rs
expression: expressions
---
[
  (List([
    (Identifier("fn"), SimpleSpan(
      start: 1,
      end: 3,
      context: (),
    )),
    (List([
      (Identifier("main"), SimpleSpan(
        start: 5,
        end: 9,
        context: (),
      )),
    ]), SimpleSpan(
      start: 4,
      end: 10,
      context: (),
    )),
    (List([
      (Identifier("print_line"), SimpleSpan(
        start: 40,
        end: 50,
        context: (),
      )),
      (String("Hello, world!"), SimpleSpan(
        start: 51,
        end: 66,
        context: (),
      )),
    ]), SimpleSpan(
      start: 39,
      end: 67,
      context: (),
    )),
  ]), SimpleSpan(
    start: 0,
    end: 68,
    context: (),
  )),
]
